Item 71, 20, 14: Made the CRUD operations also take the route_stops table into account. Also added methods for getting all stops, all stops in a route, a specific stop and a specific route