@@ -45,35 +45,93 @@ public class DatabaseConnectionTest {
         testDB.stopDB();
     }
 
+    // A test that tests if the Routes are inserted correctly via the insertRoutesIntoDatabase() method
     @Test
     @DisplayName("Route is inserted successfully")
-    public void insertRouteIntoDatabase_RouteInsertedCorrectly() throws Exception {
+    public void insertRouteIntoDatabase_RouteInsertedSuccessfully() throws Exception {
         // Arrange
-        // Creates the Admin SQL Adapter connection to test the method
+        // Creates the SQL Adapters connection to test the method
         DatabaseAdminSQLAdapter adminSQLAdapter = new DatabaseAdminSQLAdapter(connection);
+        DatabaseSQLAdapter sqlAdapter = new DatabaseSQLAdapter(connection);
 
         // Creates 2 Stop objects and puts them into an ArrayList for use by the Route object
         Stop stop1 = new Stop(7, "testStop1");
         Stop stop2 = new Stop(8, "testStop1");
 
-        ArrayList<Stop> testStops = new ArrayList<>();
+        // Gets all the stops from Route with id "1"
+        ArrayList<Stop> stopsFromRoute1 = sqlAdapter.getAllStopsFromDatabaseInRoute(1);
 
-        testStops.add(stop1);
-        testStops.add(stop2);
+        // Creates a testStops ArrayList and adds only stop 5 and 6 to the ArrayList
+        ArrayList<Stop> testStops = new ArrayList<>();
+        testStops.add(stopsFromRoute1.get(4));
+        testStops.add(stopsFromRoute1.get(5));
 
         // Creates a Route object to add to the test-database
-        Route testRoute = new Route(5, "Test Route", testStops);
+        Route testRoute = new Route(3, "Test Route", testStops);
 
         // Act
         // Runs the insertRouteIntoDatabase() method
         adminSQLAdapter.insertRouteIntoDatabase(testRoute);
+
+        // Uses the getRouteStartEndStops() method to get the start and end stop in a route
         ArrayList<Integer> startEndStops = testDB.getRouteStartEndStops(testRoute.getId());
 
         // Assert
         // Counts the rows in the "routes" table after one route has been added
         Assertions.assertEquals(3, testDB.countRowsInTable("routes"));
-        Assertions.assertEquals("Test Route", testDB.getRouteName(5));
-        Assertions.assertTrue(startEndStops.get(0) == 7 && startEndStops.get(1) == 8);
+        Assertions.assertEquals("Test Route", testDB.getRouteName(3));
+        Assertions.assertTrue(startEndStops.getFirst() == 5 && startEndStops.getLast() == 6);
+        Assertions.assertEquals(14 , testDB.countRowsInTable("route_stops"));
+    }
+
+    // A test that tests if the Routes are updated correctly via the updateRoutesInDatabase() method
+    @Test
+    @DisplayName("Route is updated successfully")
+    public void updateRouteInDatabase_RouteUpdatedSuccessfully() throws Exception {
+        // Arrange
+        // Creates the SQL Adapters connection to test the method
+        DatabaseAdminSQLAdapter adminSQLAdapter = new DatabaseAdminSQLAdapter(connection);
+        DatabaseSQLAdapter sqlAdapter = new DatabaseSQLAdapter(connection);
+
+        // Uses the getAllRoutesFromDatabase() method to get Route 1 for updating
+        Route oldRoute = sqlAdapter.getAllRoutesFromDatabase().getFirst();
+
+        // Gets and ArrayList of stops for the Route that will be updated
+        ArrayList<Stop> testStops = sqlAdapter.getAllStopsFromDatabaseInRoute(oldRoute.getId());
+
+        // Removes the first and last stop to check if the edited Route will be updated correctly
+        testStops.remove(testStops.getFirst());
+        testStops.remove(testStops.getLast());
+
+        // Act
+        // Updates Route 1 to
+        adminSQLAdapter.updateRouteInDatabase(oldRoute, new Route(1, "Test Route", testStops));
+
+        // Uses the getRouteStartEndStops() method to get the start and end stop in a route
+        ArrayList<Integer> startEndStops = testDB.getRouteStartEndStops(1);
+
+        // Assert
+        Assertions.assertEquals("Test Route", testDB.getRouteName(1));
+        Assertions.assertTrue(startEndStops.getFirst() == 2 && startEndStops.getLast() == 5);
+    }
+
+    // A test that tests if the Routes are deleted correctly via the deleteRouteInDatabase()
+    @Test
+    @DisplayName("Route is deleted successfully")
+    public void deleteRouteInDatabase_RouteDeletedSuccessfully() throws Exception {
+        // Arrange
+        // Creates the SQL Adapters connection to test the method
+        DatabaseAdminSQLAdapter adminSQLAdapter = new DatabaseAdminSQLAdapter(connection);
+        DatabaseSQLAdapter sqlAdapter = new DatabaseSQLAdapter(connection);
+
+        // Uses the getAllRoutesFromDatabase() method to get Route 1 for deleting
+        Route oldRoute = sqlAdapter.getAllRoutesFromDatabase().getFirst();
+
+        // Act
+        adminSQLAdapter.deleteRouteInDatabase(oldRoute);
+
+        // Assert
+        Assertions.assertEquals(1, testDB.countRowsInTable("routes"));
     }
 
     // A test that tests if the getRoutesFromDatabase method returns the correct data
@@ -81,7 +139,7 @@ public class DatabaseConnectionTest {
     @DisplayName("Routes is returned successfully")
     public void getRoutesFromDatabase_RoutesReturnedSuccessfully() throws Exception {
     // Arrange
-    // Creates the SQL Adapter connection to test the method
+    // Creates the SQL Adapters connection to test the method
     DatabaseSQLAdapter sqlAdapter = new DatabaseSQLAdapter(connection);
 
     // Sets the test to find routes where stop 5 and 2 exists and stop 5 is before stop 2
@@ -106,7 +164,7 @@ public class DatabaseConnectionTest {
 
     // Act
     // Calls the getRoutesFromDatabase with the test inputs as parameters
-    route = sqlAdapter.getRoutesFromDatabase(start_stop, end_stop);
+    route = sqlAdapter.getRoutesFromDatabaseFromTo(start_stop, end_stop);
 
     // Assert
     // Checks if the "ruter" ArrayList contains exactly 1 Route after calling the method
